src/test/resources/regression/verification/xlang/error/Array8.scala
object Array8 {

  def foo(a: Array[Int]): Array[Int] = {
    a
  }

}
